--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,8 @@ jobs:
         with:
           node-version: 18.x
 
-      - name: Update npm 🚀
-        run: npm install -g npm@latest
+      # - name: Update npm 🚀
+      #   run: npm install -g npm@latest
 
       - name: Install and Build 🔧
         run: |
