--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ env:
   GITHUB_USERNAME: NoorulhudaSadaqat
   REACT_APP_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   USE_GITHUB_DATA: "true"
-  MEDIUM_USERNAME: "Noorulhudasadaqat"
+  MEDIUM_USERNAME: "noorulhudasadaqat48"
 
 on:
   workflow_dispatch:
